--- a/app/assets/stylesheets/widgets/_project_status.scss
+++ b/app/assets/stylesheets/widgets/_project_status.scss
@@ -12,7 +12,7 @@
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap;
-        max-width: 170px;
+        max-width: 165px;
         display: inline-block;
     }
 
